# DC-backend

./: .env.sample  .gitignore  Cargo.toml  README.md  sqlite.db
migrations/2019-10-24-184929_initialize/: down.sql  up.sql
src/: errors.rs  main.rs  models.rs  schema.rs
src/routes/: auth.rs  groups.rs  mod.rs  notes.rs  users.rs
