[package]
name = "backend"
version = "0.1.0"
authors = ["Vake Domen <vake.domen94@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = '1.0'
argonautica = "0.2"
actix-identity = "0.1.0"
lazy_static = "1.3.0"
bcrypt = "~0.4.0"

chrono = { version = "~0.4.6", features = ["serde"] }
diesel = { version = "~1.4.2", features = ["sqlite", "uuid", "r2d2", "chrono"] }
dotenv = "~0.14.1"
jsonwebtoken = "~6.0.1"
futures = "~0.1.27"
r2d2 = "~0.8.5"
serde_derive="~1.0"
serde_json="~1.0"
serde="~1.0"
uuid = { version = "~0.7", features = ["serde", "v4"] }
